--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = mongodb+srv://mongo:mongo@cluster0.hvhskhu.mongodb.net/
+MONGODB_URL = mongodb+srv://mongo:mongo@cluster0.hvhskhu.mongodb.net/Users
